合并webadmin1.3.2版本到主线，来自webadmin1.3.2版本SVN：9280.
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@9290 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.index.html
+++ b/App/View/internal/internal.index.html
@@ -233,7 +233,7 @@
                     <?if(count($v['contact']) > 1){?>
                         <span>多联系人</span>
                         <div class="more">
-                            <ul <?if($k>10){echo 'style="bottom:0px;"';}?> >
+                            <ul <?if($k>10){echo 'style="bottom:0px;top:inherit"';}?> >
                             <?foreach ($v['contact'] as $key => $value) { ?>
                                 <li><table width="99%"><tr align="center">
                                 <td width="20%"><?=$value['advisor'].'-'.$value['department']?></td>
