--- a/App/View/seo/seo.edit.html
+++ b/App/View/seo/seo.edit.html
@@ -57,20 +57,19 @@
             </tr>
             <tr>
                 <td class="f-clearfix">
-                <div class="bzform">
-                    <label for="tdi1" style="float:left;">标&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;签：</label>
-                    <div id="tags">
-                        <?foreach($seo['labelArr'] as $vl){?>
-                        <span style="padding: 0px 5px;border: 1px solid  #DDDDDD;" ><?=$vl?> <a href="javascript:;" onclick="removeLabel(<?=$seo['id']?>,'<?=$vl?>',1)"> ×</a></span>
-                        <?}?>
-                    </div>
-                    <br/>
-                        
+                    <div class="bzform">
+                        <label for="tdi1" style="float:left;height:30px;">标&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;签：</label>
+                        <div id="tags" style="margin-bottom:5px;">
+                             <?foreach($seo['labelArr'] as $vl){?>
+                            <span style="padding: 0px 5px;border: 1px solid  #DDDDDD;" ><?=$vl?> <a href="javascript:;" onclick="removeLabel(<?=$seo['id']?>,'<?=$vl?>',1)"> ×</a></span>
+                            <?}?>
+                        </div>
+
                         <div class="mj-deiBtns">
-                            <input type="text" id="label" name="label" style="display: inline-block; margin: 6px 5px 0px 64px;width: 80px"/>
-                            <a href="javascript:void(0);" id="mj-deib" onclick="addLabel(1);" style="width: 40px;height: 25px;line-height:25px; background: #FF6633; ">添加</a>
+                            <input type="text" id="label" name="label" style="display: inline-block;width: 80px">
+                            <a href="javascript:void(0);" id="mj-deib" onclick="addLabel(1);" style="width: 40px;height: 25px;line-height:25px; background: #FF6633;margin-top:0px;">添加</a>
                         </div>
-                        </div>
+                    </div>
                 </td>
             </tr>
             <tr>
