--- a/App/View/topic/topic.edit.html
+++ b/App/View/topic/topic.edit.html
@@ -28,7 +28,7 @@
 		<input type="hidden" name="banner" id="banner" value="<?=$topic['banner']?>">
 		<input type="hidden" name="bgImg" id="bgImg" value="<?=$topic['bgImg']?>">
         <input type="hidden" name="listClass" id="allClass" value="<?=$topic['listClass']?>" />
-        <input type="hidden" name="listPic" class="bzpic" value="<?=$info['listPic']?>" />
+        <input type="hidden" name="listPic" class="bzpic" value="<?=$topic['listPic']?>" />
 		<div>
 			<ul>
 				<li>
@@ -52,8 +52,8 @@
                                 <li><br><hr><br></li>
                 <li>
                     <label>是否上架：</label>
-                                        <input type="radio"  name="isUse" value="1" <?if($topic['isUse']==1) echo "checked='checked'";?> />上架
-                                        <input type="radio"  name="isUse" value="2" <?if($topic['isUse']==2) echo "checked='checked'";?> />下架
+                                        <input type="radio"  name="isUse" value="1" <?if($topic['isUse']==1) echo "checked";?> />上架
+                                        <input type="radio"  name="isUse" value="2" <?if($topic['isUse']==2) echo "checked";?> />下架
                 </li>
                                 <li><br><hr><br></li>
                 <li>
@@ -86,11 +86,12 @@
                     <div class="alert alert-warning" style="padding:2px;margin-bottom:10px;margin-top:10px;" role="alert">
                     列表广告图片建议尺寸为 ( xxx ) x ( xxx )，文件最大不超过200kb，当前支持jpg,bmp,png格式文件
                     </div>
+                    <span ><label>ALT描述: </label><input type="text" name="alt4" value="<?=$topic['alt4']?>"></span><br/>
                 </li>
                 <li>
                     <label>列表页显示分类：</label>
                     <div class="list-class">
-                        <? $allClass = array_filter(explode(',', $topic['listPic']));
+                        <? $allClass = array_filter(explode(',', $topic['listClass']));
                         foreach (range(1,45) as $k => $v) { ?>
                             <span style="display:inline-block;">
                             <input type="checkbox" class="allClass" <?if(in_array($v, $allClass)){echo 'checked';}?> tname="allClass" value="<?=$v?>">&nbsp;<?=$v?>类
