git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@9332 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.index.html
+++ b/App/View/internal/internal.index.html
@@ -363,6 +363,9 @@
             $(".mj-ddList").toggle();
         });
         $("#mj-sBtn").click(function(){
+			var index = layer.load(1, {
+				shade: [0.5,'#fff'] //0.1透明度的白色背景
+			});
             $("#saleSearchForm").submit();
         });
         
