git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@9333 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.index.html
+++ b/App/View/internal/internal.index.html
@@ -371,6 +371,9 @@
         
         //精确搜索
         $("#jq_search").click(function(){
+			var index = layer.load(1, {
+				shade: [0.5,'#fff'] //0.1透明度的白色背景
+			});
             $("input[name='jname']").val(1);
             $("#saleSearchForm").submit();
         });
