添加精确搜索多选才提交
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@9335 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.index.html
+++ b/App/View/internal/internal.index.html
@@ -375,6 +375,13 @@
 				shade: [0.5,'#fff'] //0.1透明度的白色背景
 			});
             $("input[name='jname']").val(1);
+            var tempStr = $("#tmClass").val();
+            if(tempStr.indexOf(",")<=0){
+                layer.msg('请选择多个类别！', {
+                                time: 1000 
+                            });
+                return;
+            }
             $("#saleSearchForm").submit();
         });
         //注册时间选择切换效果
