修改专利管理BUG，增加添加按钮
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@9434 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/patent/patent.index.html
+++ b/App/View/patent/patent.index.html
@@ -121,7 +121,7 @@
         <p class="text-left" style="float:left;padding-top:20px;">共有 <b class="red"><?=$allTotal?></b> 条数据，当前筛选结果 <b class="blue"><?=$total?></b> 条数据</p>
         <div class="wrap-tittle">
             <? if( in_array('15', $_role_) ){ ?>
-            <!--<button class="btn btn-danger" onclick="add();"    type="button">创建商品</button>-->
+            <button class="btn btn-danger" onclick="add();"    type="button">创建商品</button>
             <? } ?>
             <!--<button class="btn btn-info" onclick="download();" type="button" type="button">导出表格EXCEL</button>-->
             <? if( in_array('2', $_role_) ){ ?>
