--- a/App/View/patent/patent.edit.html
+++ b/App/View/patent/patent.edit.html
@@ -18,7 +18,7 @@
     <div class="mj-ztBar f-clearfix">
         <div class="mj-ztBl">
             <span>商品状态</span>
-            <em class="blue"><?=$patentStatus[$patent['status']]?></em>
+            <em class="blue"><?=$saleStatus[$patent['status']]?></em>
             <?if(!$isBlack){?>
                 <?if($patent['status']==1){?>
                     <? if( in_array('2', $_role_) || (in_array('26', $_role_) && $patent['isTop'] == 0 && $patent['listSort'] == 0) ){ ?>
@@ -35,8 +35,8 @@
         </span>
     <div class="mj-detaImg">
         <div class="mj-deiT">
-            <span>商标基本信息</span>
-            <a target="_blank" href="<?=$gjUrl?>">去商标管家查看详细信息</a>
+            <span>专利基本信息</span>
+            <a target="_blank" href="<?=$gjUrl?>">去万象云查看详细信息</a>
         </div>
         <div class="mj-deiB f-clearfix">
             
@@ -46,15 +46,15 @@
                     <td rowspan="4" width="25%"><label><img src="<?=$tminfo['imgUrl']?>" alt=""/></label></td>
                 </tr>
                 <tr>
-                    <td width="25%">专利名称：<?=$patent['title']?></td>
-                    <td width="25%">专利号：<?=$patent['number']?></td>
+                    <td width="25%" style="text-align:left;padding-left: 20px;">专利名称：<?=$patent['title']?></td>
+                    <td width="25%" style="text-align:left;padding-left: 20px;">专利号：<?=$patent['number']?></td>
                     <td width="50%">注册日期：<?=$patent['applyDate']>0?date('Y-m-d',$patent['applyDate']):'0000-00-00'?> &nbsp;&nbsp;&nbsp;&nbsp;公开日期：<?=date('Y-m-d',$patent['publicDate'])?></td>
                 </tr>
                 <tr>
-                    <td colspan="3" style="text-align:left">&nbsp;行业分类：<?=$patentType[$patent['type']]?></td>
+                    <td colspan="3" style="text-align:left;padding-left: 20px;">&nbsp;专利分类：<?=$patentType[$patent['type']]?></td>
                 </tr>
                 <tr >
-                    <td colspan="3" style="text-align:left">&nbsp;专利类型:
+                    <td colspan="3" style="text-align:left;padding-left: 20px;">&nbsp;行业分类:
                         <?php
                         $classList = explode(",", $patent['class']);
                         if($patent['type']==1 || $patent['type']==2){
