--- a/App/View/patent/patent.create.html
+++ b/App/View/patent/patent.create.html
@@ -7,14 +7,14 @@
     <h5>创建商品</h5>
     <div class="mj-glC">
         <div class="mj-glT">
-            <span class="on">查询需要创建的商标</span>
+            <span class="on">查询需要创建的专利</span>
             <label></label>
             <span>编辑商品详情</span>
             <label></label>
             <span>创建成功</span>
         </div>
         <div class="mj-inp">
-            <p>你需要输入一个商标号来查询商标</p>
+            <p>你需要输入一个专利号来查询专利</p>
             <input type="text" id="searchNumber" />
             <span id="searchInfo" style="display:none;"></span>
             <div style="text-align:center"> <a class="mj-sBtn" id="addBtn" href="javascript:void(0);" style="display:none;margin:0 auto;" onclick="_addGoods('yes');" >创建商品</a></div>
@@ -23,10 +23,10 @@
 </div>
 
 <script type="text/javascript">
-    var _tmBlack    = '该商标位于黑名单内，请先解除黑名单限制 <a href="javascript:void(0);" onClick="_outBlack();">解除黑名单</a>';
-    var _tmEdit     = '该商标已有对应商标 ';
-    var _tmNull     = '无该商标，请验证后输入';
-    var _tmWuxiao   = '该商标号已失效';
+    var _tmBlack    = '该专利位于黑名单内，请先解除黑名单限制 <a href="javascript:void(0);" onClick="_outBlack();">解除黑名单</a>';
+    var _tmEdit     = '该专利已有对应专利 ';
+    var _tmNull     = '无该专利，请验证后输入';
+    var _tmWuxiao   = '该专利号已失效';
     $(function(){
         $(".mj-glM").show();
         $(".mj-close").on("click",function(){
@@ -47,7 +47,7 @@
         var _info   = $("#searchInfo");
         _info.hide();
         if ( _value == '' ){
-            _info.text('请输入商标号');
+            _info.text('请输入专利号');
             _info.show();
         }
         $.ajax({
@@ -70,11 +70,11 @@
                     var _edit_ = '<a href="/patent/edit/?id='+data.id+'" target="rightFrame">点击进入编辑</a>';
                     _info.html(_tmEdit+_edit_);
                     _info.show();
-                }else if (data.code==4){//无该商标
+                }else if (data.code==4){//无该专利
                     _info.text(_tmNull);
                     _info.show();
-                }else if (data.code==6){//商标号为空
-                    _info.text('请输入商标号');
+                }else if (data.code==6){//专利号为空
+                    _info.text('请输入专利号');
                     _info.show();
                 }else if (data.code==0){//未创建成功
                     _info.show();
