--- a/App/View/patent/patent.delete.html
+++ b/App/View/patent/patent.delete.html
@@ -80,6 +80,7 @@
                     layer.msg('操作成功！', {
                         time: 1000 //2秒关闭（如果不配置，默认是3秒）
                     }, function(){
+                         parent.$('.chklist').prop("checked",false);
                         parent.window.location.reload();
                     });
                 }else{
