修改专利。商标分类群组设置BUG
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@9436 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/patent/patent.edit.html
+++ b/App/View/patent/patent.edit.html
@@ -48,7 +48,7 @@
                 <tr>
                     <td width="25%" style="text-align:left;padding-left: 20px;">专利名称：<?=$patent['title']?></td>
                     <td width="25%" style="text-align:left;padding-left: 20px;">专利号：<?=$patent['number']?></td>
-                    <td width="50%" style="text-align:left;padding-left: 20px;">注册日期：<?=$patent['applyDate']>0?date('Y-m-d',$patent['applyDate']):'0000-00-00'?> </td>
+                    <td width="50%" style="text-align:left;padding-left: 20px;">申请日：<?=$patent['applyDate']>0?date('Y-m-d',$patent['applyDate']):'0000-00-00'?> </td>
                 </tr>
                 <tr>
                     <td colspan="3" style="text-align:left;padding-left: 20px;">&nbsp;专利分类：<?=$patentType[$patent['type']]?></td>
