--- a/App/View/tmclass/tmclass.editgroup.html
+++ b/App/View/tmclass/tmclass.editgroup.html
@@ -14,7 +14,7 @@
 <div class="wrap">
 <input type="hidden" name="saleId" id="saleId" value="<?=$sale['id']?>">
     <span class="ms-close mj-close"></span>
-    <div class="wrap-top">
+    <div class="wrap-top" style="width:520px;">
         <h4 style="width: 100px">分类群组设置</h4>>编辑分类<span> </span>
     </div>
     <div class="mj-ztBar f-clearfix">
