--- a/App/View/patent/patent.edit.html
+++ b/App/View/patent/patent.edit.html
@@ -47,7 +47,7 @@
                 </tr>
                 <tr>
                     <td width="25%" style="text-align:left;padding-left: 20px;">专利名称：<?=$patent['title']?></td>
-                    <td width="25%" style="text-align:left;padding-left: 20px;">专利号：<?=$patent['number']?></td>
+                    <td width="25%" style="text-align:left;padding-left: 20px;">申请号：<?=$patent['number']?></td>
                     <td width="50%" style="text-align:left;padding-left: 20px;">申请日：<?=$patent['applyDate']>0?date('Y-m-d',$patent['applyDate']):'0000-00-00'?> </td>
                 </tr>
                 <tr>
