修改商标管理特价显示方式
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@9466 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.index.html
+++ b/App/View/internal/internal.index.html
@@ -272,7 +272,7 @@
                     <td class="showMore">
                     <?if(count($v['contact']) > 1){echo '多底价';}else{$ct=current($v['contact']);echo $ct['price'];} ?>
                     </td>
-                    <td><?if($v['priceType']==2){echo "议价";}else{echo $v['price'];}?></td>
+                    <td><?if($v['priceType']==2){echo "议价";}else{if(($v['isOffprice']==1 && $v['salePriceDate']>time()) || ($v['isOffprice']==1 && $v['salePriceDate']==0) ){echo $v['salePrice'];}else{echo $v['price'];}}?></td>
                     <td>
                         <span class="icon icon-delete">
                         <?if($v['status']==1){?>
