--- a/App/View/patent/patent.contact.html
+++ b/App/View/patent/patent.contact.html
@@ -30,6 +30,8 @@
         <li><label>顾问部门：</label><input type="text" name="department" maxlength="15" /></li>
         <li><label>顾问：</label><input type="text" name="advisor" maxlength="15" /></li>
         <li><label>出售价格审核：</label><em>同意</em></li>
+         <li><label>出售备注：</label><textarea name="memo" style="width:60%;height:70px;"></textarea></li>
+        
         <li><label>操作：</label>
             <a href="javascript:void(0);" class="mj-liBtns" onclick="opContact();">确定</a>
             <a href="javascript:void(0);" class="mj-liBtns mj-abgcg" onclick="closeAll();">取消</a>
@@ -58,12 +60,8 @@
         <li><label>底价：</label><input type="text" name="price" value="<?=$contact['price']?>" maxlength="10" /></li>
         <li><label>顾问部门：</label><input type="text" name="department" value="<?=$contact['department']?>" maxlength="15" /></li>
         <li><label>顾问：</label><input type="text" name="advisor" value="<?=$contact['advisor']?>" maxlength="15" /></li>
-        <li><label>出售价格审核：</label><em>同意
-            <!-- <select name="isVerify">
-                <option value="1" <?if($contact['isVerify']==1){echo 'selected';}?> >同意</option>
-                <option value="2" <?if($contact['isVerify']==2){echo 'selected';}?> >不同意</option>
-            </select></li> -->
-            </em>
+        <li><label>出售价格审核：</label><em>同意</em></li>
+        <li><label>出售备注：</label><textarea id="memo" name="memo" style="width:60%;height:70px;"><?=$contact['memo']?></textarea></li>
         <li><label>操作：</label>
             <a href="javascript:void(0);" class="mj-liBtns" onclick="opContact();">确定</a>
             <a href="javascript:void(0);" class="mj-liBtns mj-abgcg" onclick="closeAll();">取消</a>
