--- a/App/View/patent/patent.edit.html
+++ b/App/View/patent/patent.edit.html
@@ -2,6 +2,22 @@
 <link rel="stylesheet" href="<?=StaticDir?>1.2/css/details.css">
 <script charset="utf-8" src="<?=StaticDir?>/editor/kindeditor.js"></script>
 <script charset="utf-8" src="<?=StaticDir?>/editor/lang/zh_CN.js"></script>
+<style type="text/css">
+    .info-show {
+        position: absolute;
+        z-index: 1000;
+        display: none;
+        border:2px solid #ccc;
+        background-color: #FFF;
+        padding:5px;
+        max-width: 300px;
+        text-align: left;
+        margin-left: 90px;
+    }
+    .info-pic img{
+          float: right;
+    }
+</style>
 <script>
         KindEditor.ready(function(K) {
             window.editor = K.create('#intro', {
@@ -99,7 +115,7 @@
                 <td><?if ($vl['date']<=0){echo '---';}else{echo date('Y-m-d', $vl['date']);}?></td>
                 
                 <td><?=$saleSource[$vl['source']]?></td>
-                <td><?=$vl['name']?></td>
+                <td class="info-pic"><?=$vl['name']?> <img class="info-icon" src="<?=StaticDir?>1.2/images/u253.gif"><div class="info-show"><?if(!empty($vl['memo'])){echo $vl['memo'];}else{echo "无";}?></div></td>
                 <td><?=$vl['phone']?></td>
                 <td><?=$vl['price']<=0?'议价':$vl['price']?></td>
                 <td><?=$saleType[$vl['saleType']]?></td>
@@ -290,7 +306,7 @@
 </div>
 
 <script type="text/javascript" src="<?=StaticDir?>1.2/js/patent/updown.js"></script>
-<script type="text/javascript" src="<?=StaticDir?>1.2/js/patent/saleEdit.js"></script>
+<script type="text/javascript" src="<?=StaticDir?>1.2/js/patent/saleEdit.js?v=11"></script>
 
 <script type="text/javascript">
     $(function(){
@@ -306,7 +322,14 @@
                 $(".mj-seCl").hide();
             }
         });
-
+        
+        //显示出售备注详情
+        $(".info-icon").hover(function(){
+            $(this).parent().children('.info-show').css('display', 'block');
+        },function(){
+            $(this).parent().children('.info-show').hide();
+        });
+        
         //多选处理
         $('input[type="checkbox"]').click(function(){
             var strClass = '';
