--- a/App/View/patent/patent.edit.html
+++ b/App/View/patent/patent.edit.html
@@ -117,7 +117,7 @@
                 <td><?=$saleSource[$vl['source']]?></td>
                 <td class="info-pic"><?=$vl['name']?> <img class="info-icon" src="<?=StaticDir?>1.2/images/u253.gif"><div class="info-show"><?if(!empty($vl['memo'])){echo $vl['memo'];}else{echo "无";}?></div></td>
                 <td><?=$vl['phone']?></td>
-                <td><?=$vl['price']<=0?'议价':$vl['price']?></td>
+                <td><?=$vl['price']<=0?'面议':$vl['price']?></td>
                 <td><?=$saleType[$vl['saleType']]?></td>
                 <td><?=$vl['department']?></td>
                 <td><?=$vl['advisor']?></td>
