--- a/App/View/patent/patent.index.html
+++ b/App/View/patent/patent.index.html
@@ -19,7 +19,7 @@
             <dd>
                 <label>专利分类：</label>
                 <div class="mj-checkbox">
-                    <input type="radio" name="type" value=" "  <?if(empty($s['type'])){ echo 'checked';} ?> />
+                    <input type="radio" name="type" value=" "  <?if(empty($s['type'])){ echo 'checked';} ?> onclick="showClass(99)" />
                     <label >全部</label>
                 </div>
                 
@@ -638,8 +638,10 @@ function showClass(c){
     $(".mj-ddList ul input:checked").attr("checked",false);
     if(c==1 || c==2){
         $("#oneClass").show();
-    }else{
+    }else if(c==3){
         $("#twoClass").show();
+    }else{
+         $(".mj-ddList ul").hide();
     }
 }
 </script>
