修改批量下架数据验证问题，和其他小bug
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@9528 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.edit.html
+++ b/App/View/internal/internal.edit.html
@@ -237,7 +237,7 @@
                 </div>
                 <? } ?>
                 <div class="mj-checkbox">
-                    <label for="bq9">置项：</label>
+                    <label for="bq9">置顶：</label>
                     <select name="isTop">
                     <? foreach ($tmTop as $k => $v) { ?>
                         <option value="<?=$k?>" <?if($sale['isTop']==$k){echo 'selected';}?>>
