--- a/App/View/patent/patent.edit.html
+++ b/App/View/patent/patent.edit.html
@@ -224,7 +224,7 @@
     <form id="bzxxForm">
                 <dd>
                 <div class="mj-checkbox">
-                    <label for="bq9">置&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;项：</label>
+                    <label for="bq9">置&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;顶：</label>
                     <select name="isTop">
                     <? foreach ($tmTop as $k => $v) { ?>
                         <option value="<?=$k?>" <?if($patent['isTop']==$k){echo 'selected';}?>>
