git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@9656 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.index.html
+++ b/App/View/internal/internal.index.html
@@ -143,6 +143,10 @@
                 </div>
                 <? } ?>
             </dd>
+            <dd>
+                <label>出售人联系电话：</label>
+                <input type="text" name="phone" value="<?=$s['phone']?>" class="input input-sm"/> 
+            </dd>
             <dd style="height: 35px;">
                 <a href="javascript:void(0);" style="margin: 10px;float: left;" class="mj-sBtn" id="mj-sBtn">搜索</a>
                 <a href="javascript:void(0);" style="margin: 10px;float: left; <? if(empty($s['tmClass'])){?>display: none;<? } ?>" class="mj-sBtn" id="jq_search">精确搜索</a>
